res/default.css
/* ... */
progress[value]::-webkit-progress-bar {
    background-color: rgb(206, 206, 195);
}

progress[value]::-webkit-progress-value {
    background-color: rgb(100,200,100);
}

#loadingProgressInfo {
    padding-top: 5px;
}

/*======================================================================*/

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-button {
    width: 0px;
    height: 0px;
}

::-webkit-scrollbar-thumb {
    background: #d0d0d0;
    border-radius: 40px;
}

::-webkit-scrollbar-track {
    background: #f0f0f0;
    border-radius: 50px;
}

::-webkit-scrollbar-corner {
    background: transparent;
}

/*======================================================================*/

.tooltip-block, .tooltip-block div {
    z-index: 9999;
    display: inline-block;
    cursor: pointer;
    padding-left: 3px;
}

.tooltip-content {
    background-color: rgb(239, 239, 244);
    border: 1px solid #a8a7ac;
    position: absolute;
    margin-left: 20px;
    padding-right: 10px;
}

.copyright {
    text-decoration: none;
}

.copyright:hover {
    text-decoration: underline;
}

.link {
    cursor: pointer;
    padding-right: 10px;
}

a.link.collapse {
    opacity: 0.2;
}

a.link.collapse:hover {
    opacity: 0.9;
}

.res-toolbar {
    display: inline-block;
}

.res-toolbar.right {
    text-align: right;
    margin-right:-18px;
    float: right;
}

.res-toolbar.left {
    padding-left:5px;
}

.res-table {
    max-width: 340px;
    width: 100%;
    display: table;
    border-collapse: separate;
    border-spacing: 3px;
}

.res-row {
    padding-bottom: 4px;
    display:table-row;
}

.res-row.craft:hover {
    background-color: rgba(155, 200, 155, 0.3);
}

.res-cell {
    padding-left: 2px;
    padding-right: 2px;
    display:table-cell;
    white-space: nowrap !important;

    overflow-x: hidden;
    text-overflow: ellipsis;
}

.res-cell.resource-name {
    width: 60px;
    max-width: 85px;
}

.res-cell.resource-value {
    width: 75px;
    max-width: 90px;
}

.res-cell.resPerTick {
    cursor: pointer;
}

.res-cell.positive-weather {
    color: green;
}

.res-cell.negative-weather {
    color: red;
}

.res-cell.craft-link {
    cursor: pointer;
    width: 20px;
    max-width: 60px;
}

.res-cell.craft-link .plusPrefix {
    font-size: 80%;
}

.res-cell.craft-link.all{
    font-size: 80%;
    opacity: 0.4;
}

.res-cell.craft-link:hover {
    text-decoration: underline;
    text-shadow: -0.06ex 0 black, 0.06ex 0 black;
}

.res-cell.craft-link:active {
            animation: pulseShort 0.5s;
    -webkit-animation: pulseShort 0.5s;
       -moz-animation: pulseShort 0.5s;
         -o-animation: pulseShort 0.5s;
    user-select: none;
}

@keyframes pulseShort {
    100% {transform: scale(1.1);}
}
@-webkit-keyframes pulseShort {
    100% {transform: scale(1.1);}
}
@-moz-keyframes pulseShort {
    100% {transform: scale(1.1);}
}
@-o-keyframes pulseShort {
    100% {transform: scale(1.1);}
}

.map-viewport {
    border: 1px solid lightgray;
    height: 250px;
    padding: 20px;
}

/*--------------------------------------
                Map
--------------------------------------*/

.map-container {
    overflow: hidden;
}

.map-viewport {
    max-width: 250px;
    overflow: hidden;
}

.map-row {
    white-space: nowrap !important;
}

.map-cell {
    border: 1px solid lightgray;
    width: 35px;
    height: 35px;
    display: inline-block;
    margin: 2px;
    cursor: pointer;

    fill: lightgray;
    user-select: none;
}

.map-cell.focused {
    border: 1px solid lightskyblue;
}

.map-cell.selected {
    border: 1px solid darkorange;
}

.map-cell.active {
            animation: border-pulse 4s infinite;
    -webkit-animation: border-pulse 4s infinite;
       -moz-animation: border-pulse 4s infinite;
         -o-animation: border-pulse 4s infinite;
}

.map-cell.locked {
    visibility: hidden;
}

@keyframes border-pulse {
    0%,100% {border: 1px solid lightgray;}
        50% {border: 1px solid red;}
}
@-webkit-keyframes border-pulse {
    0%,100% {border: 1px solid lightgray;}
        50% {border: 1px solid red;}
}
@-moz-keyframes border-pulse {
    0%,100% {border: 1px solid lightgray;}
        50% {border: 1px solid red;}
}
@-o-keyframes border-pulse {
    0%,100% {border: 1px solid lightgray;}
        50% {border: 1px solid red;}
}

.map-cell .coord {
    font-size: 10px;
    color: lightgray;
}
.map-cell .label {
    position: relative;
    float:left;
}

.map-cell progress {
    height: 2px;
    display: block;
    width: 100%;
    margin-bottom: -1px;
    -webkit-appearance: none;
    appearance: none;
}

.map-cell .tooltip-content {
    margin-left: 50px;
    position: relative;
    float:left;
    z-index: 99999;
}

.map-cell .tooltip-content div {
    white-space: nowrap !important;
}

.map-viewport, .map-dashboard {
    display: inline-block;
    vertical-align: top;
    border: 1px solid lightgray;
    height: 250px;
    margin-right: 10px;
}

.map-dashboard {
    width: 150px;
    padding: 5px;
}

.map-dashboard .btn {
    width: 120px;
}


div.blaze {
            animation: blaze-rainbow 3s linear infinite;
    -webkit-animation: blaze-rainbow 3s linear infinite;
       -moz-animation: blaze-rainbow 3s linear infinite;
         -o-animation: blaze-rainbow 3s linear infinite;
}

div.hail {
            animation: hail-rainbow 1.5s linear infinite;
    -webkit-animation: hail-rainbow 1.5s linear infinite;
       -moz-animation: hail-rainbow 1.5s linear infinite;
         -o-animation: hail-rainbow 1.5s linear infinite;
}

div.pray {
            animation: pray-rainbow 1.5s linear infinite;
    -webkit-animation: pray-rainbow 1.5s linear infinite;
       -moz-animation: pray-rainbow 1.5s linear infinite;
         -o-animation: pray-rainbow 1.5s linear infinite;
}
/* ... */

